feat: implement KeyWrappingSpecification structure
Add KeyWrappingSpecification model, codecs, tests, and benchmark subject.
Register new codecs and benchmark subject in service loader files.
Update KeyWrappingData tests and benchmarks to use correct WrappingMethod instantiation.
Update generator templates to include necessary imports and improve builder and value extraction logic.