@@ -5,29 +5,33 @@ import org.purpleBean.kmip.api.EncodingType;
 import org.purpleBean.kmip.api.KmipDataType;
 import org.purpleBean.kmip.api.KmipSpec;
 import org.purpleBean.kmip.model.core.enumeration.WrappingMethod;
+import org.purpleBean.kmip.model.core.type.UniqueIdentifier;
 import org.purpleBean.kmip.test.suite.AbstractKmipStructureTestSuite;
 
 import java.util.List;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-@DisplayName("KeyWrappingData Domain Tests")
-class KeyWrappingDataTest extends AbstractKmipStructureTestSuite<KeyWrappingData> {
+@DisplayName("KeyWrappingSpecification Domain Tests")
+class KeyWrappingSpecificationTest extends AbstractKmipStructureTestSuite<KeyWrappingSpecification> {
 
     @Override
     protected void setupDefaultSpec() {
-        defaultSpec = KmipSpec.V2_1;
+        defaultSpec = KmipSpec.V1_2;
     }
 
     @Override
-    protected Class<KeyWrappingData> type() {
-        return KeyWrappingData.class;
+    protected Class<KeyWrappingSpecification> type() {
+        return KeyWrappingSpecification.class;
     }
 
     @Override
-    protected KeyWrappingData createDefault() {
-        return KeyWrappingData.builder()
+    protected KeyWrappingSpecification createDefault() {
+        return KeyWrappingSpecification.builder()
                 .wrappingMethod(WrappingMethod.Standard.ENCRYPT.inst())
+                .encryptionKeyInformation(EncryptionKeyInformation.builder()
+                        .uniqueIdentifier(UniqueIdentifier.of(UUID.randomUUID().toString())).build())
                 .build();
     }
 
@@ -38,12 +42,13 @@ class KeyWrappingDataTest extends AbstractKmipStructureTestSuite<KeyWrappingData
 
     @Override
     protected int expectedMinComponentCount() {
-        return 1;
+        return 2;
     }
 
     @Override
     protected void validateComponents(List<KmipDataType> values) {
-        assertThat(values).hasSize(1);
-        assertThat(values.getFirst()).isInstanceOf(WrappingMethod.class);
+        assertThat(values).hasSize(2);
+        assertThat(values.get(0)).isInstanceOf(WrappingMethod.class);
+        assertThat(values.get(1)).isInstanceOf(EncryptionKeyInformation.class);
     }
 }
